1998-09-02  Mark R. Boyns  <boyns@doit.org>

	* rplayd/audio/audio_*.c (rplay_audio_open): enabled close-on-exec
 	on rplay_audio_fd to fix mp3 helper bug.

1998-07-14  Mark R. Boyns  <boyns@doit.org>

	* rplayd/sound.c: improved header parsing.

1998-06-29  Mark R. Boyns  <boyns@doit.org>

	* Version 3.3.0 released.

1998-06-18  Mark R. Boyns  <boyns@doit.org>

	* etc: include sample config files.

	* configure.in: add --enable-rplayd-user=USER and
 	--enable-rplayd-group=GROUP.

1998-06-17  Mark R. Boyns  <boyns@doit.org>

	* removed xrplay.

	* include/config.h.in: define AUTO_REREAD by default.

	* use rx.

1998-06-16  Mark R. Boyns  <boyns@doit.org>

	* rplayd/rplayd.c: added --user and --group options and
	RPLAYD_USER and RPLAYD_GROUP config.h options.

1998-06-11  Mark R. Boyns  <boyns@doit.org>

	* doc/rplay.helpers.5: new man page.

	* rplay/rplay.c: handle broken pipe better.

	* rplayd/command.c: added helper support.

	* rplayd/spool.c: added helper support.

	* rplayd/rplayd.c: added helper support.

	* rplayd/sound.c: added helper support.

	* rplayd/helper.c: new file to maintain helper application
 	information.  New config file rplay.helpers.

1998-06-03  Mark R. Boyns  <boyns@doit.org>

	* rplayd/rplayd.c (doit): make sure the timer starts.
	(doit): keep trying to open the audio device.

	* rplayd/timer.c (timer_update): approximate getospace to keep
 	things going.

1998-03-08  Mark Boyns  <boyns@sdsu.edu>

	* rplayd/sound.c (sound_read): allow directories in rplay.conf.
  	When found, all files in a directory are made available to rplayd.

1997-12-24  Mark Boyns  <boyns@sdsu.edu>

	* rplayd/sound.c (sound_open): ditto

	* rplayd/cache.c (cache_create): ditto

	* rplayd/rplayd.c (doit): ditto

	* rplayd/connection.c: use EAGAIN with EINTR.

1997-12-23  Mark Boyns  <boyns@sdsu.edu>

	* contrib/xjukebox-0.9/rptpstuff.c: fixed enough to work with
 	recent versions of rplay.

	* doc/xrplay.1.in: updated

	* doc/rptp.1.in: updated
